# codeverse-terminal-client

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  pyproject.toml  setup.py
codeverse_cli/: __init__.py  __version__.py  auth.py  client.py  config.py  file_sync.py  main.py  streaming.py  utils.py
